2008-03-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-coding.texi (Gnus Maintainance Guide): Update conventions for
	custom versions.

2008-03-07  Alan Mackenzie  <acm@muc.de>

	* cc-mode.texi (Limitations and Known Bugs): State that the number of
	parens/brackets in a k&r region is limited.

2008-02-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-news.texi: Mention problem with coding system `utf-8-emacs' when
	using different Emacs versions.

2008-02-27  Glenn Morris  <rgm@gnu.org>

	* sc.texi: Remove a lot of old and obsolete info.
	(titlepage): Simplify.
	(Emacs 19 MUAs, Emacs 18 MUAs, MH-E with any Emacsen)
	(VM with any Emacsen, GNEWS with any Emacsen)
	(Overloading for Non-conforming MUAs, Version 3 Changes)
	(The Supercite Mailing List): Delete nodes.
	(Introduction): Remove info about old packages.
	(Getting Connected): Simplify.  Remove info about old packages.
	(Citing Commands): Delete Emacs 19 info.
	(Hints to MUA Authors): Simplify.
	(Thanks and History): Merge in some info from the deleted node
	"Version 3 Changes".

2008-02-05  Juanma Barranquero  <lekktu@gmail.com>

	* org.texi (Setting tags, In-buffer settings):
	* rcirc.texi (rcirc commands): Replace `legal' with `valid'.

2008-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-news.texi: Mention that spaces and tabs are allowed in the
	installation directory name.

2008-02-12  Romain Francoise  <romain@orebokech.com>

	* epa.texi (Overview): Fix typo.

2008-02-11  Daiki Ueno  <ueno@unixuser.org>

	* epa.texi (Quick start): Remove the .emacs setting.

2008-02-10  Daiki Ueno  <ueno@unixuser.org>

	* epa.texi (Quick start): Use the command `epa-enable' instead of
	loading `epa-setup'.

2008-02-08  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (INFO_TARGETS, DVI_TARGETS, clean): Add epa.
	($(infodir)/epa, epa.dvi): New targets.

2008-02-08  Daiki Ueno  <ueno@unixuser.org>

	* Makefile.in: Add rules to build EasyPG Assistant User's Manual.
